# CAP8.0

./: .gitignore  BF_PER_STAGE_PLAN.md  CMakeLists.txt  CODEBASE_MAP.md  INSTALL_REPORT_HERWIG.md  JETS_KNOWN_ISSUES.md  LETTER_TO_HERWIG_AGENT.md  LETTER_TO_HERWIG_AGENT_v2.md  LETTER_TO_HERWIG_AGENT_v3.md  LHC.tex  MISSING_CLASSES.md  README.md  REPLY_TO_CAP_AGENT_v3.md  SetupCAP.sh  TECHNICAL_REPORT.aux  TECHNICAL_REPORT.out  TECHNICAL_REPORT.tex  TECHNICAL_REPORT.toc  cap-backup.sh  cap-bf-evolution  cap-check  cap-plot  install  run-cap  setup-cap  setup-cap-gui
DB/ParticleData/: particles.data.new
analyses/: README.md
analyses/builder/: build-ini-gui  cap_ini_builder.py  cap_preset.py  cap_theme.py  generator_presets.py  subsample_aggregator.py  wsu_script_generator.py
analyses/builder/presets/: __init__.py  glauber_pbpb.py  pythia_pair3d.py  pythia_single.py
analyses/stubs/: CAPAnalysesLinkDef.h  CMakeLists.txt  EventFilterCreator.cpp  EventFilterCreator.hpp  FileIterator.cpp  FileIterator.hpp  FilterCreator.cpp  FilterCreator.hpp  GlobalCalculator.cpp  GlobalCalculator.hpp  ParticleDbTask.cpp  ParticleDbTask.hpp  ParticleFilterCreator.cpp  ParticleFilterCreator.hpp  ParticlePair3DBfCalculator.cpp  ParticlePair3DBfCalculator.hpp  ParticlePair3DCalculator.cpp  ParticlePair3DCalculator.hpp  ParticlePairCalculator.cpp  ParticlePairCalculator.hpp  ParticleSingleCalculator.cpp  ParticleSingleCalculator.hpp  ParticleTypeTask.cpp  ParticleTypeTask.hpp  RunAnalysis.cpp  RunAnalysis.hpp  StubParticlePairBfCalculator.cpp  StubParticlePairBfCalculator.hpp
cmake/: FindFastJet.cmake  FindHepMC3.cmake  FindHerwig.cmake  FindLHAPDF.cmake  FindPythia8.cmake  FindRivet.cmake  FindYODA.cmake
gui/: run-cap  setup-cap-gui
projects/Glauber/: glauber.ini
scripts/: cap-logging.sh  preflight.sh
src/: CMakeLists.txt
src/Base/: CMakeLists.txt  Task.cpp
src/BasicEventGen/: CMakeLists.txt
src/CAPHepMC3/: CAPHepMC3LinkDef.h  CMakeLists.txt  HepMC3EventReader.cpp  HepMC3EventReader.hpp
src/CAPHerwig/: CAPHerwigLinkDef.h  CMakeLists.txt  HerwigEventGenerator.cpp  HerwigEventGenerator.hpp
src/CAPPythia/: CAPPythiaLinkDef.h  CMakeLists.txt  PythiaEventGenerator.cpp  PythiaEventGenerator.hpp
src/Epos/: CMakeLists.txt
src/Glauber/: CMakeLists.txt  GlauberAnalyzer.cpp  GlauberAnalyzer.hpp  GlauberEventMoments.cpp  GlauberGenerator.cpp  GlauberHistos.cpp  GlauberLinkDef.h  GlauberNucleon.cpp  GlauberNucleus.cpp  GlauberPoint.hpp  NNProfile.cpp  NuclearDistribution.cpp  Plots.C
src/Global/: CMakeLists.txt
src/Helpers/: CMakeLists.txt  CanvasList.cpp  HistogramGroup.cpp
src/Jets/: CMakeLists.txt  JetHistos.cpp  JetHistos.hpp  JetHistosDerived.hpp  JetPairHistos.cpp  JetPairHistos.hpp  JetPairMassHistos.cpp  JetPairMassHistos.hpp  JetSingleHistos.cpp  JetSingleHistos.hpp
src/Latex/: CMakeLists.txt  LatexAuthor.cpp  LatexDocument.cpp  LatexDocument.hpp  LatexFigure.cpp  LatexSubsubsection.hpp
src/Macros/: SmokeTest.C
src/Math/: CMakeLists.txt  Vector3D.cpp  Vector3D.hpp  VectorLorentz.cpp  VectorLorentz.hpp
src/NuDyn/: CMakeLists.txt  NuDynHistos.cpp
src/PHSD/: CMakeLists.txt
src/ParticleFlow/: CMakeLists.txt
src/ParticlePair/: CMakeLists.txt  ParticlePairAnalyzer.cpp  ParticlePairHistos.cpp
src/ParticlePair3D/: CMakeLists.txt  ParticlePair3DDerivedHistos.cpp  ParticlePair3DHistos.cpp
src/ParticleSingle/: CMakeLists.txt  ParticleSingleDerivedHistos.cpp  ParticleSingleHistos.cpp
src/Particles/: CMakeLists.txt  EventIterator.cpp  HistogramGroup.cpp  ManagedObjects.hpp
src/Performance/: CMakeLists.txt
src/Plotting/: CMakeLists.txt
src/PtPt/: CMakeLists.txt  PtPtHistos.cpp
src/Spherocity/: CMakeLists.txt  SpherocityAnalyzer.cpp  SpherocityHistos.cpp
src/SubSample/: CMakeLists.txt
src/Therminator3/: CMakeLists.txt
src/Xml/: CMakeLists.txt
